<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouteOperation">

    <TextView
        android:id="@+id/txtBandeauHaut"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/BleuMoney"
        android:text="@string/txtTitreAppli"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/txtSolde"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonValide"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="17dp"
        android:background="@color/BleuMoney"
        android:text="@string/txtSolde"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/lblSolde"
        android:layout_width="163dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAnnule"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:layout_toEndOf="@+id/txtSolde"
        android:text="0,00 €"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />




    <TextView
        android:id="@+id/lblNomCompteAjoute"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/txtBandeauHaut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:text="Nom du Compte "
        android:textSize="30dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtDate"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblNomCompteAjoute"
        android:layout_marginTop="20dp"
        android:text="@string/txtDate"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblNomCompteAjoute"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@+id/txtDate"
        android:background="@color/white"
        android:ems="10"
        android:hint="JJ/MM/AAAA"
        android:inputType="date"
        android:textAlignment="center" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="79dp"

        android:layout_below="@+id/txtDate"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:backgroundTint="@color/Bleuclair"
        android:onClick="openDateClicker"
        android:text="Calendrier"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40px"
        app:icon="@android:drawable/ic_menu_month"
        app:iconGravity="textEnd"
        app:iconPadding="8dp"
        app:iconSize="28dp"
        app:iconTintMode="src_in" />

    <TextView
        android:id="@+id/txtBeneficiaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDate"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:text="@string/txtLibelle"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/lblBeneficiaire"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDate"
        android:maxLength="18"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/txtBeneficiaire"
        android:background="@color/white"
        android:ems="10"
        android:hint=" Bénéficiaire "
        android:inputType="text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtMontant"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_marginTop="20dp"
        android:text="@string/txtMontant"
        android:textSize="20dp"
        android:onClick="openDatePicker"/>

    <EditText
        android:id="@+id/lblMontant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/lblBeneficiaire"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/txtMontant"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonValide"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMontant"
        android:layout_marginTop="60dp"
        android:text="Valide" />

    <Button
        android:id="@+id/buttonAnnule"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMontant"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@+id/buttonValide"
        android:text="Annule" />

    <TextView
        android:id="@+id/typeOP"
        android:layout_width="78dp"
        android:layout_height="34dp"
        android:layout_above="@+id/txtSolde"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="24dp"
        android:layout_toEndOf="@+id/buttonAnnule"
        android:text="Type OP"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/groupeBouttonFreq"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtMontant"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/freq1"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:checked="true"
            android:onClick="checkbutton"
            android:text="une seul fois"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/freq2"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:onClick="checkbutton"
            android:text="Tous les mois"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/freq3"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:onClick="checkbutton"
            android:text="Tous les 2 mois"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RadioGroup>


</RelativeLayout>