<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouteOperation">

    <TextView
        android:id="@+id/txtBandeauHaut"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/BleuMoney"
        android:text="@string/txtTitreAppli"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/txtSolde"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonValide"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="200dp"
        android:background="@color/BleuMoney"
        android:text="@string/txtSolde"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp" />


    <TextView
        android:id="@+id/montantvirement"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAnnule"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/txtSolde"
        android:background="@color/white"
        android:text="0,00 €"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp" />


    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:text="@string/txtDate"
        android:textColor="@color/black"

        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtNomDuCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:textColor="@color/black"

        android:text="Nouveau compte"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/creaDuCompte"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:maxLength="24"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@+id/txtDate"

        android:background="@color/white"
        android:ems="10"
        android:textColor="@color/black"

        android:hint="Nom du compte"
        android:inputType=""
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextDate"

        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="23dp"
        android:layout_toEndOf="@+id/txtDate"
        android:textColor="@color/black"

        android:background="@color/white"
        android:ems="10"
        android:hint="JJ/MM/AAAA"
        android:inputType="date"
        android:textAlignment="center" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="210dp"
        android:layout_height="77dp"

        android:layout_below="@+id/txtDate"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:backgroundTint="@color/Bleuclair"
        android:onClick="openDateClicker"
        android:text="Calendrier"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40px"
        app:icon="@android:drawable/ic_menu_month"
        app:iconGravity="textEnd"
        app:iconPadding="8dp"
        app:iconSize="28dp"
        app:iconTintMode="src_in" />

    <TextView
        android:id="@+id/txtBeneficiaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBandeauHaut"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="31dp"
        android:background="@color/white"
        android:textColor="@color/black"

        android:text="Création de compte"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/txtMontant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:textColor="@color/black"

        android:text="@string/txtMontant"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/lblMontant"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_marginStart="66dp"
        android:layout_marginTop="228dp"
        android:layout_toEndOf="@+id/txtMontant"
        android:background="@color/white"
        android:textColor="@color/black"

        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonValide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMontant"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:text="Valide" />

    <Button
        android:id="@+id/buttonAnnule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMontant"
        android:layout_marginStart="65dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/buttonValide"
        android:background="@color/white"
        android:text="Annule" />

    <TextView
        android:id="@+id/typeOP"
        android:layout_width="78dp"
        android:layout_height="34dp"
        android:layout_above="@+id/txtSolde"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="24dp"
        android:layout_toEndOf="@+id/buttonAnnule"
        android:text="Type OP"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/groupeBouttonChoix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBeneficiaire"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_toEndOf="@+id/datePickerButton"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/choix1"

            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkbutton"
            android:text="Fichier1"
            android:textAlignment="center"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/choix2"
            android:layout_width="match_parent"

            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:onClick="checkbutton"
            android:text="Fichier 2"
            android:textAlignment="center"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/choix3"
            android:layout_width="match_parent"

            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:onClick="checkbutton"
            android:text="Fichier 3"
            android:textAlignment="center"
            android:textSize="15sp" />


    </RadioGroup>

</RelativeLayout>